ingress-rule.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-webserver-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /server1
        backend:
          serviceName: nginx
          servicePort: 80
      - path: /server2
        backend:
          serviceName: apache
          servicePort: 81
